# InterviewPreparationKit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Arrays/2d-array/: CMakeLists.txt  main.cpp
Arrays/crush/: CMakeLists.txt  main.cpp
Arrays/ctci-array-left-rotation/: CMakeLists.txt  main.cpp
Arrays/minimum-swaps-2/: CMakeLists.txt  main.cpp
Arrays/new-year-chaos/: CMakeLists.txt  main.cpp
Dictionaries/count-triplets-1/: CMakeLists.txt  main.cpp
Dictionaries/ctci-ransom-note/: CMakeLists.txt  main.cpp
Dictionaries/frequency-queries/: CMakeLists.txt  main.cpp
Dictionaries/sherlock-and-anagrams/: CMakeLists.txt  main.cpp
Dictionaries/two-strings/: CMakeLists.txt  main.cpp
DynamicProgramming/abbr/: CMakeLists.txt  main.cpp
DynamicProgramming/candies/: CMakeLists.txt  main.cpp
DynamicProgramming/decibinary-numbers/: CMakeLists.txt  main.cpp
DynamicProgramming/max-array-sum/: CMakeLists.txt  main.cpp
Graphs/ctci-bfs-shortest-reach/: CMakeLists.txt  main.cpp
Graphs/ctci-connected-cell-in-a-grid/: CMakeLists.txt  main.cpp
Graphs/find-the-nearest-clone/: CMakeLists.txt  main.cpp
Graphs/matrix/: CMakeLists.txt  main.cpp
Graphs/torque-and-development/: CMakeLists.txt  main.cpp
GreedyAlgorithms/angry-children/: CMakeLists.txt  main.cpp
GreedyAlgorithms/greedy-florist/: CMakeLists.txt  main.cpp
GreedyAlgorithms/luck-balance/: CMakeLists.txt  main.cpp
GreedyAlgorithms/minimum-absolute-difference-in-an-array/: CMakeLists.txt  main.cpp
GreedyAlgorithms/reverse-shuffle-merge/: CMakeLists.txt  main.cpp
LinkedLists/ctci-linked-list-cycle/: CMakeLists.txt  main.cpp
LinkedLists/find-the-merge-point-of-two-joined-linked-lists/: CMakeLists.txt  main.cpp
LinkedLists/insert-a-node-at-a-specific-position-in-a-linked-list/: CMakeLists.txt  main.cpp
LinkedLists/insert-a-node-into-a-sorted-doubly-linked-list/: CMakeLists.txt  main.cpp
LinkedLists/reverse-a-doubly-linked-list/: CMakeLists.txt  main.cpp
Miscellaneous/ctci-big-o/: CMakeLists.txt  main.cpp
Miscellaneous/flipping-bits/: CMakeLists.txt  main.cpp
Miscellaneous/friend-circle-queries/: CMakeLists.txt  main.cpp
Miscellaneous/maximum-xor/: CMakeLists.txt  main.cpp
Recursion/crossword-puzzle/: CMakeLists.txt  main.cpp
Recursion/ctci-fibonacci-numbers/: CMakeLists.txt  main.cpp
Recursion/ctci-recursive-staircase/: CMakeLists.txt  main.cpp
Recursion/recursive-digit-sum/: CMakeLists.txt  main.cpp
Search/ctci-ice-cream-parlor/: CMakeLists.txt  main.cpp
Search/making-candies/: CMakeLists.txt  main.cpp
Search/maximum-subarray-sum/: CMakeLists.txt  main.cpp
Search/minimum-time-required/: CMakeLists.txt  main.cpp
Search/pairs/: CMakeLists.txt  main.cpp
Search/swap-nodes-algo/: CMakeLists.txt  main.cpp
Search/triple-sum/: CMakeLists.txt  main.cpp
Sorting/ctci-bubble-sort/: CMakeLists.txt  main.cpp
Sorting/ctci-comparator-sorting/: CMakeLists.txt  main.cpp
Sorting/ctci-merge-sort/: CMakeLists.txt  main.cpp
Sorting/fraudulent-activity-notifications/: CMakeLists.txt  main.cpp
Sorting/mark-and-toys/: CMakeLists.txt  main.cpp
StacksQueues/balanced-brackets/: CMakeLists.txt  main.cpp
StacksQueues/castle-on-the-grid/: CMakeLists.txt  main.cpp
StacksQueues/ctci-queue-using-two-stacks/: CMakeLists.txt  main.cpp
StacksQueues/largest-rectangle/: CMakeLists.txt  main.cpp
StacksQueues/min-max-riddle/: CMakeLists.txt  main.cpp
StacksQueues/poisonous-plants/: CMakeLists.txt  main.cpp
Strings/alternating-characters/: CMakeLists.txt  main.cpp
Strings/common-child/: CMakeLists.txt  main.cpp
Strings/ctci-making-anagrams/: CMakeLists.txt  main.cpp
(+22 files in other folders)
