cmake_minimum_required(VERSION 3.14)
project(ipk)

add_subdirectory(Dictionaries/ctci-ransom-note)
add_subdirectory(Dictionaries/two-strings)
add_subdirectory(Dictionaries/sherlock-and-anagrams)
add_subdirectory(Dictionaries/count-triplets-1)
add_subdirectory(Dictionaries/frequency-queries)
add_subdirectory(Sorting/ctci-bubble-sort)
add_subdirectory(Sorting/mark-and-toys)
add_subdirectory(Sorting/ctci-comparator-sorting)
add_subdirectory(Sorting/fraudulent-activity-notifications)
add_subdirectory(Sorting/ctci-merge-sort)
add_subdirectory(Strings/ctci-making-anagrams)
add_subdirectory(Strings/alternating-characters)
add_subdirectory(Strings/sherlock-and-valid-string)
add_subdirectory(Strings/special-palindrome-again)
add_subdirectory(Strings/common-child)
add_subdirectory(GreedyAlgorithms/minimum-absolute-difference-in-an-array)
add_subdirectory(GreedyAlgorithms/luck-balance)
add_subdirectory(GreedyAlgorithms/greedy-florist)
add_subdirectory(GreedyAlgorithms/angry-children)
add_subdirectory(GreedyAlgorithms/reverse-shuffle-merge)
add_subdirectory(Search/ctci-ice-cream-parlor)
add_subdirectory(Search/swap-nodes-algo)
add_subdirectory(Search/pairs)
add_subdirectory(Search/triple-sum)
add_subdirectory(Search/minimum-time-required)
add_subdirectory(Search/maximum-subarray-sum)
add_subdirectory(Search/making-candies)
add_subdirectory(DynamicProgramming/max-array-sum)
add_subdirectory(DynamicProgramming/abbr)
add_subdirectory(DynamicProgramming/candies)
add_subdirectory(DynamicProgramming/decibinary-numbers)
add_subdirectory(StacksQueues/balanced-brackets)
add_subdirectory(StacksQueues/ctci-queue-using-two-stacks)
add_subdirectory(StacksQueues/largest-rectangle)
add_subdirectory(StacksQueues/min-max-riddle)
add_subdirectory(StacksQueues/castle-on-the-grid)
add_subdirectory(StacksQueues/poisonous-plants)
add_subdirectory(Graphs/torque-and-development)
add_subdirectory(Graphs/find-the-nearest-clone)
add_subdirectory(Graphs/ctci-bfs-shortest-reach)
add_subdirectory(Graphs/ctci-connected-cell-in-a-grid)
add_subdirectory(Graphs/matrix)
add_subdirectory(Trees/tree-height-of-a-binary-tree)
add_subdirectory(Trees/binary-search-tree-lowest-common-ancestor)
add_subdirectory(Trees/ctci-is-binary-search-tree)
add_subdirectory(Trees/tree-huffman-decoding)
add_subdirectory(Trees/balanced-forest)
add_subdirectory(LinkedLists/insert-a-node-at-a-specific-position-in-a-linked-list)
add_subdirectory(LinkedLists/insert-a-node-into-a-sorted-doubly-linked-list)
add_subdirectory(LinkedLists/reverse-a-doubly-linked-list)
add_subdirectory(LinkedLists/find-the-merge-point-of-two-joined-linked-lists)
add_subdirectory(LinkedLists/ctci-linked-list-cycle)
add_subdirectory(Recursion/ctci-fibonacci-numbers)
add_subdirectory(Recursion/ctci-recursive-staircase)
add_subdirectory(Recursion/crossword-puzzle)
add_subdirectory(Recursion/recursive-digit-sum)
add_subdirectory(Miscellaneous/flipping-bits)
add_subdirectory(Miscellaneous/ctci-big-o)
add_subdirectory(Miscellaneous/friend-circle-queries)
add_subdirectory(Miscellaneous/maximum-xor)
add_subdirectory(Warmup/sock-merchant)
add_subdirectory(Warmup/counting-valleys)
add_subdirectory(Warmup/jumping-on-the-clouds)
add_subdirectory(Warmup/repeated-string)
add_subdirectory(Arrays/2d-array)
add_subdirectory(Arrays/ctci-array-left-rotation)
add_subdirectory(Arrays/new-year-chaos)
add_subdirectory(Arrays/minimum-swaps-2)
add_subdirectory(Arrays/crush)

add_executable(ipk main.cpp)
